# davis

./: build.sh  manage.py  pyproject.toml
accounts/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
cart/: models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py
checkout/: urls.py  views.py
customer/: models.py  serializers.py  urls.py  views.py
customer/migrations/: 0001_initial.py
davis/: asgi.py  settings.py  urls.py  views.py  wsgi.py
helper/: haversine.py  models.py  notification.py
location/: models.py
location/migrations/: 0001_initial.py
menu/: models.py  serializers.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_remove_fooditem_image_url_fooditem_image.py
orders/: models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_firebase_order_id.py
